@@ -87,6 +87,10 @@ Core
 
 Library
 
+- strop is now *really* obsolete (this was announced before with 1.6),
+  and issues DeprecationWarning when used (except for the four items
+  that are still imported into string.py).
+
 - Cookie.py now sorts key+value pairs by key in output strings.
 
 - pprint.isrecursive(object) didn't correctly identify recursive objects.
